src/sqc/parse.output
Zustand 36 Konflikte: 1 Schiebe/Reduziere
Zustand 37 Konflikte: 1 Schiebe/Reduziere
Zustand 38 Konflikte: 1 Schiebe/Reduziere
Zustand 39 Konflikte: 4 Schiebe/Reduziere
Zustand 40 Konflikte: 4 Schiebe/Reduziere
Zustand 41 Konflikte: 2 Schiebe/Reduziere
Zustand 49 Konflikte: 1 Schiebe/Reduziere
Zustand 68 Konflikte: 1 Schiebe/Reduziere


Grammatik

    0 $accept: start $end

    1 start: %empty
    2      | statements

    3 statements: statement
    4           | statement statements

    5 statement: "return" exp01 ";"
    6          | "return" ";"
    7          | "throw" exp01 ";"
    8          | vardecl ";"
    9          | funcdecl
   10          | if
   11          | for
   12          | while
   13          | trycatch
   14          | switch
   15          | assignment
   16          | exp01 ";"
   17          | ";"
   18          | error

   19 assignment: IDENT "=" exp01

   20 vardecl: "let" IDENT "=" exp01
   21        | "let" IDENT "be" exp01
   22        | "private" IDENT "=" exp01
   23        | "private" IDENT "be" exp01

   24 funcdecl: "function" IDENT funchead codeblock

   25 function: "function" funchead codeblock

   26 funchead: "(" ")"
   27         | "(" arglist ")"

   28 arglist: IDENT
   29        | IDENT ","
   30        | IDENT "," arglist

   31 codeblock: statement ";"
   32          | "{" "}"
   33          | "{" statements "}"

   34 if: "if" "(" exp01 ")" codeblock
   35   | "if" "(" exp01 ")" codeblock "else" codeblock

   36 for: "for" IDENT "from" NUMBER "to" NUMBER codeblock
   37    | "for" IDENT "from" NUMBER "to" NUMBER "step" NUMBER codeblock
   38    | "for" "(" IDENT ":" IDENT ")" codeblock

   39 while: "while" "(" exp01 ")" codeblock
   40      | "do" codeblock "while" "(" exp01 ")"

   41 trycatch: "try" codeblock "catch" "(" IDENT ")" codeblock

   42 switch: "switch" "(" exp01 ")" "{" caselist "}"

   43 caselist: case
   44         | caselist case

   45 case: "case" exp01 ":" codeblock
   46     | "case" exp01 ":"
   47     | "default" ":" codeblock
   48     | "default" ":"

   49 exp01: exp02
   50      | exp02 "?" exp01 ":" exp01

   51 exp02: exp03
   52      | exp03 "||" exp01

   53 exp03: exp04
   54      | exp04 "&&" exp01

   55 exp04: exp05
   56      | exp05 "===" exp01
   57      | exp05 "!==" exp01
   58      | exp05 "==" exp01
   59      | exp05 "!=" exp01

   60 exp05: exp06
   61      | exp06 "<" exp01
   62      | exp06 "<=" exp01
   63      | exp06 ">" exp01
   64      | exp06 ">=" exp01

   65 exp06: exp07
   66      | exp07 "+" exp01
   67      | exp07 "-" exp01

   68 exp07: exp08
   69      | exp08 "*" exp01
   70      | exp08 "/" exp01
   71      | exp08 "%" exp01

   72 exp08: exp09
   73      | "!" exp09

   74 exp09: expp
   75      | expp "." IDENT "(" explist ")"

   76 expp: "(" exp01 ")"
   77     | IDENT "(" explist ")"
   78     | value

   79 value: function
   80      | STRING
   81      | array
   82      | NUMBER
   83      | "true"
   84      | "false"
   85      | "nil"
   86      | IDENT

   87 array: "[" "]"
   88      | "[" explist "]"

   89 explist: exp01
   90        | exp01 ","
   91        | explist "," exp01


Terminale und die Regeln, in denen sie verwendet werden

$end (0) 0
error (256) 18
"return" (258) 5 6
"throw" (259) 7
"let" (260) 20 21
"be" (261) 21 23
"function" (262) 24 25
"if" (263) 34 35
"else" (264) 35
"from" (265) 36 37
"to" (266) 36 37
"step" (267) 37
"while" (268) 39 40
"do" (269) 40
"try" (270) 41
"catch" (271) 41
"switch" (272) 42
"case" (273) 45 46
"default" (274) 47 48
"nil" (275) 85
"true" (276) 83
"false" (277) 84
"for" (278) 36 37 38
"private" (279) 22 23
":" (280) 38 45 46 47 48 50
"{" (281) 32 33 42
"}" (282) 32 33 42
"(" (283) 26 27 34 35 38 39 40 41 42 75 76 77
")" (284) 26 27 34 35 38 39 40 41 42 75 76 77
"[" (285) 87 88
"]" (286) 87 88
";" (287) 5 6 7 8 16 17 31
"," (288) 29 30 90 91
"+" (289) 66
"-" (290) 67
"<=" (291) 62
"<" (292) 61
">=" (293) 64
">" (294) 63
"===" (295) 56
"==" (296) 58
"!==" (297) 57
"!=" (298) 59
"!" (299) 73
"=" (300) 19 20 22
"&&" (301) 54
"/" (302) 70
"*" (303) 69
"%" (304) 71
"?" (305) 50
"||" (306) 52
"." (307) 75
NUMBER (308) 36 37 82
IDENT (309) 19 20 21 22 23 24 28 29 30 36 37 38 41 75 77 86
STRING (310) 80


Nicht-Terminal und die Regeln, in denen sie verwendet werden

$accept (56)
    auf der linken Seite: 0
start (57)
    auf der linken Seite: 1 2, auf der rechten Seite: 0
statements (58)
    auf der linken Seite: 3 4, auf der rechten Seite: 2 4 33
statement (59)
    auf der linken Seite: 5 6 7 8 9 10 11 12 13 14 15 16 17 18, auf der rechten Seite:
    3 4 31
assignment (60)
    auf der linken Seite: 19, auf der rechten Seite: 15
vardecl (61)
    auf der linken Seite: 20 21 22 23, auf der rechten Seite: 8
funcdecl (62)
    auf der linken Seite: 24, auf der rechten Seite: 9
function (63)
    auf der linken Seite: 25, auf der rechten Seite: 79
funchead (64)
    auf der linken Seite: 26 27, auf der rechten Seite: 24 25
arglist (65)
    auf der linken Seite: 28 29 30, auf der rechten Seite: 27 30
codeblock (66)
    auf der linken Seite: 31 32 33, auf der rechten Seite: 24 25 34
    35 36 37 38 39 40 41 45 47
if (67)
    auf der linken Seite: 34 35, auf der rechten Seite: 10
for (68)
    auf der linken Seite: 36 37 38, auf der rechten Seite: 11
while (69)
    auf der linken Seite: 39 40, auf der rechten Seite: 12
trycatch (70)
    auf der linken Seite: 41, auf der rechten Seite: 13
switch (71)
    auf der linken Seite: 42, auf der rechten Seite: 14
caselist (72)
    auf der linken Seite: 43 44, auf der rechten Seite: 42 44
case (73)
    auf der linken Seite: 45 46 47 48, auf der rechten Seite: 43 44
exp01 (74)
    auf der linken Seite: 49 50, auf der rechten Seite: 5 7 16 19 20
    21 22 23 34 35 39 40 42 45 46 50 52 54 56 57 58 59 61 62 63 64
    66 67 69 70 71 76 89 90 91
exp02 (75)
    auf der linken Seite: 51 52, auf der rechten Seite: 49 50
exp03 (76)
    auf der linken Seite: 53 54, auf der rechten Seite: 51 52
exp04 (77)
    auf der linken Seite: 55 56 57 58 59, auf der rechten Seite: 53
    54
exp05 (78)
    auf der linken Seite: 60 61 62 63 64, auf der rechten Seite: 55
    56 57 58 59
exp06 (79)
    auf der linken Seite: 65 66 67, auf der rechten Seite: 60 61 62
    63 64
exp07 (80)
    auf der linken Seite: 68 69 70 71, auf der rechten Seite: 65 66
    67
exp08 (81)
    auf der linken Seite: 72 73, auf der rechten Seite: 68 69 70 71
exp09 (82)
    auf der linken Seite: 74 75, auf der rechten Seite: 72 73
expp (83)
    auf der linken Seite: 76 77 78, auf der rechten Seite: 74 75
value (84)
    auf der linken Seite: 79 80 81 82 83 84 85 86, auf der rechten Seite:
    78
array (85)
    auf der linken Seite: 87 88, auf der rechten Seite: 81
explist (86)
    auf der linken Seite: 89 90 91, auf der rechten Seite: 75 77 88
    91


Zustand 0

    0 $accept: . start $end

    error       schiebe und gehe zu Zustand 1 über
    "return"    schiebe und gehe zu Zustand 2 über
    "throw"     schiebe und gehe zu Zustand 3 über
    "let"       schiebe und gehe zu Zustand 4 über
    "function"  schiebe und gehe zu Zustand 5 über
    "if"        schiebe und gehe zu Zustand 6 über
    "while"     schiebe und gehe zu Zustand 7 über
    "do"        schiebe und gehe zu Zustand 8 über
    "try"       schiebe und gehe zu Zustand 9 über
    "switch"    schiebe und gehe zu Zustand 10 über
    "nil"       schiebe und gehe zu Zustand 11 über
    "true"      schiebe und gehe zu Zustand 12 über
    "false"     schiebe und gehe zu Zustand 13 über
    "for"       schiebe und gehe zu Zustand 14 über
    "private"   schiebe und gehe zu Zustand 15 über
    "("         schiebe und gehe zu Zustand 16 über
    "["         schiebe und gehe zu Zustand 17 über
    ";"         schiebe und gehe zu Zustand 18 über
    "!"         schiebe und gehe zu Zustand 19 über
    NUMBER      schiebe und gehe zu Zustand 20 über
    IDENT       schiebe und gehe zu Zustand 21 über
    STRING      schiebe und gehe zu Zustand 22 über

    $end  reduziere mit Regel 1 (start)

    start       gehe zu Zustand 23 über
    statements  gehe zu Zustand 24 über
    statement   gehe zu Zustand 25 über
    assignment  gehe zu Zustand 26 über
    vardecl     gehe zu Zustand 27 über
    funcdecl    gehe zu Zustand 28 über
    function    gehe zu Zustand 29 über
    if          gehe zu Zustand 30 über
    for         gehe zu Zustand 31 über
    while       gehe zu Zustand 32 über
    trycatch    gehe zu Zustand 33 über
    switch      gehe zu Zustand 34 über
    exp01       gehe zu Zustand 35 über
    exp02       gehe zu Zustand 36 über
    exp03       gehe zu Zustand 37 über
    exp04       gehe zu Zustand 38 über
    exp05       gehe zu Zustand 39 über
    exp06       gehe zu Zustand 40 über
    exp07       gehe zu Zustand 41 über
    exp08       gehe zu Zustand 42 über
    exp09       gehe zu Zustand 43 über
    expp        gehe zu Zustand 44 über
    value       gehe zu Zustand 45 über
    array       gehe zu Zustand 46 über


Zustand 1

   18 statement: error .

    $default  reduziere mit Regel 18 (statement)


Zustand 2

    5 statement: "return" . exp01 ";"
    6          | "return" . ";"

    "function"  schiebe und gehe zu Zustand 47 über
    "nil"       schiebe und gehe zu Zustand 11 über
    "true"      schiebe und gehe zu Zustand 12 über
    "false"     schiebe und gehe zu Zustand 13 über
    "("         schiebe und gehe zu Zustand 16 über
    "["         schiebe und gehe zu Zustand 17 über
    ";"         schiebe und gehe zu Zustand 48 über
    "!"         schiebe und gehe zu Zustand 19 über
    NUMBER      schiebe und gehe zu Zustand 20 über
    IDENT       schiebe und gehe zu Zustand 49 über
    STRING      schiebe und gehe zu Zustand 22 über

    function  gehe zu Zustand 29 über
    exp01     gehe zu Zustand 50 über
    exp02     gehe zu Zustand 36 über
    exp03     gehe zu Zustand 37 über
    exp04     gehe zu Zustand 38 über
    exp05     gehe zu Zustand 39 über
    exp06     gehe zu Zustand 40 über
    exp07     gehe zu Zustand 41 über
    exp08     gehe zu Zustand 42 über
    exp09     gehe zu Zustand 43 über
    expp      gehe zu Zustand 44 über
    value     gehe zu Zustand 45 über
    array     gehe zu Zustand 46 über


Zustand 3

    7 statement: "throw" . exp01 ";"

    "function"  schiebe und gehe zu Zustand 47 über
    "nil"       schiebe und gehe zu Zustand 11 über
    "true"      schiebe und gehe zu Zustand 12 über
    "false"     schiebe und gehe zu Zustand 13 über
    "("         schiebe und gehe zu Zustand 16 über
    "["         schiebe und gehe zu Zustand 17 über
    "!"         schiebe und gehe zu Zustand 19 über
    NUMBER      schiebe und gehe zu Zustand 20 über
    IDENT       schiebe und gehe zu Zustand 49 über
    STRING      schiebe und gehe zu Zustand 22 über

    function  gehe zu Zustand 29 über
    exp01     gehe zu Zustand 51 über
    exp02     gehe zu Zustand 36 über
    exp03     gehe zu Zustand 37 über
    exp04     gehe zu Zustand 38 über
    exp05     gehe zu Zustand 39 über
    exp06     gehe zu Zustand 40 über
    exp07     gehe zu Zustand 41 über
    exp08     gehe zu Zustand 42 über
    exp09     gehe zu Zustand 43 über
    expp      gehe zu Zustand 44 über
    value     gehe zu Zustand 45 über
    array     gehe zu Zustand 46 über


Zustand 4

   20 vardecl: "let" . IDENT "=" exp01
   21        | "let" . IDENT "be" exp01

    IDENT  schiebe und gehe zu Zustand 52 über


Zustand 5

   24 funcdecl: "function" . IDENT funchead codeblock
   25 function: "function" . funchead codeblock

    "("    schiebe und gehe zu Zustand 53 über
    IDENT  schiebe und gehe zu Zustand 54 über

    funchead  gehe zu Zustand 55 über


Zustand 6

   34 if: "if" . "(" exp01 ")" codeblock
   35   | "if" . "(" exp01 ")" codeblock "else" codeblock

    "("  schiebe und gehe zu Zustand 56 über


Zustand 7

   39 while: "while" . "(" exp01 ")" codeblock

    "("  schiebe und gehe zu Zustand 57 über


Zustand 8

   40 while: "do" . codeblock "while" "(" exp01 ")"

    error       schiebe und gehe zu Zustand 1 über
    "return"    schiebe und gehe zu Zustand 2 über
    "throw"     schiebe und gehe zu Zustand 3 über
    "let"       schiebe und gehe zu Zustand 4 über
    "function"  schiebe und gehe zu Zustand 5 über
    "if"        schiebe und gehe zu Zustand 6 über
    "while"     schiebe und gehe zu Zustand 7 über
    "do"        schiebe und gehe zu Zustand 8 über
    "try"       schiebe und gehe zu Zustand 9 über
    "switch"    schiebe und gehe zu Zustand 10 über
    "nil"       schiebe und gehe zu Zustand 11 über
    "true"      schiebe und gehe zu Zustand 12 über
    "false"     schiebe und gehe zu Zustand 13 über
    "for"       schiebe und gehe zu Zustand 14 über
    "private"   schiebe und gehe zu Zustand 15 über
    "{"         schiebe und gehe zu Zustand 58 über
    "("         schiebe und gehe zu Zustand 16 über
    "["         schiebe und gehe zu Zustand 17 über
    ";"         schiebe und gehe zu Zustand 18 über
    "!"         schiebe und gehe zu Zustand 19 über
    NUMBER      schiebe und gehe zu Zustand 20 über
    IDENT       schiebe und gehe zu Zustand 21 über
    STRING      schiebe und gehe zu Zustand 22 über

    statement   gehe zu Zustand 59 über
    assignment  gehe zu Zustand 26 über
    vardecl     gehe zu Zustand 27 über
    funcdecl    gehe zu Zustand 28 über
    function    gehe zu Zustand 29 über
    codeblock   gehe zu Zustand 60 über
    if          gehe zu Zustand 30 über
    for         gehe zu Zustand 31 über
    while       gehe zu Zustand 32 über
    trycatch    gehe zu Zustand 33 über
    switch      gehe zu Zustand 34 über
    exp01       gehe zu Zustand 35 über
    exp02       gehe zu Zustand 36 über
    exp03       gehe zu Zustand 37 über
    exp04       gehe zu Zustand 38 über
    exp05       gehe zu Zustand 39 über
    exp06       gehe zu Zustand 40 über
    exp07       gehe zu Zustand 41 über
    exp08       gehe zu Zustand 42 über
    exp09       gehe zu Zustand 43 über
    expp        gehe zu Zustand 44 über
    value       gehe zu Zustand 45 über
    array       gehe zu Zustand 46 über


Zustand 9

   41 trycatch: "try" . codeblock "catch" "(" IDENT ")" codeblock

    error       schiebe und gehe zu Zustand 1 über
    "return"    schiebe und gehe zu Zustand 2 über
    "throw"     schiebe und gehe zu Zustand 3 über
    "let"       schiebe und gehe zu Zustand 4 über
    "function"  schiebe und gehe zu Zustand 5 über
    "if"        schiebe und gehe zu Zustand 6 über
    "while"     schiebe und gehe zu Zustand 7 über
    "do"        schiebe und gehe zu Zustand 8 über
    "try"       schiebe und gehe zu Zustand 9 über
    "switch"    schiebe und gehe zu Zustand 10 über
    "nil"       schiebe und gehe zu Zustand 11 über
    "true"      schiebe und gehe zu Zustand 12 über
    "false"     schiebe und gehe zu Zustand 13 über
    "for"       schiebe und gehe zu Zustand 14 über
    "private"   schiebe und gehe zu Zustand 15 über
    "{"         schiebe und gehe zu Zustand 58 über
    "("         schiebe und gehe zu Zustand 16 über
    "["         schiebe und gehe zu Zustand 17 über
    ";"         schiebe und gehe zu Zustand 18 über
    "!"         schiebe und gehe zu Zustand 19 über
    NUMBER      schiebe und gehe zu Zustand 20 über
    IDENT       schiebe und gehe zu Zustand 21 über
    STRING      schiebe und gehe zu Zustand 22 über

    statement   gehe zu Zustand 59 über
    assignment  gehe zu Zustand 26 über
    vardecl     gehe zu Zustand 27 über
    funcdecl    gehe zu Zustand 28 über
    function    gehe zu Zustand 29 über
    codeblock   gehe zu Zustand 61 über
    if          gehe zu Zustand 30 über
    for         gehe zu Zustand 31 über
    while       gehe zu Zustand 32 über
    trycatch    gehe zu Zustand 33 über
    switch      gehe zu Zustand 34 über
    exp01       gehe zu Zustand 35 über
    exp02       gehe zu Zustand 36 über
    exp03       gehe zu Zustand 37 über
    exp04       gehe zu Zustand 38 über
    exp05       gehe zu Zustand 39 über
    exp06       gehe zu Zustand 40 über
    exp07       gehe zu Zustand 41 über
    exp08       gehe zu Zustand 42 über
    exp09       gehe zu Zustand 43 über
    expp        gehe zu Zustand 44 über
    value       gehe zu Zustand 45 über
    array       gehe zu Zustand 46 über


Zustand 10

   42 switch: "switch" . "(" exp01 ")" "{" caselist "}"

    "("  schiebe und gehe zu Zustand 62 über


Zustand 11

   85 value: "nil" .

    $default  reduziere mit Regel 85 (value)


Zustand 12

   83 value: "true" .

    $default  reduziere mit Regel 83 (value)


Zustand 13

   84 value: "false" .

    $default  reduziere mit Regel 84 (value)


Zustand 14

   36 for: "for" . IDENT "from" NUMBER "to" NUMBER codeblock
   37    | "for" . IDENT "from" NUMBER "to" NUMBER "step" NUMBER codeblock
   38    | "for" . "(" IDENT ":" IDENT ")" codeblock

    "("    schiebe und gehe zu Zustand 63 über
    IDENT  schiebe und gehe zu Zustand 64 über


Zustand 15

   22 vardecl: "private" . IDENT "=" exp01
   23        | "private" . IDENT "be" exp01

    IDENT  schiebe und gehe zu Zustand 65 über


Zustand 16

   76 expp: "(" . exp01 ")"

    "function"  schiebe und gehe zu Zustand 47 über
    "nil"       schiebe und gehe zu Zustand 11 über
    "true"      schiebe und gehe zu Zustand 12 über
    "false"     schiebe und gehe zu Zustand 13 über
    "("         schiebe und gehe zu Zustand 16 über
    "["         schiebe und gehe zu Zustand 17 über
    "!"         schiebe und gehe zu Zustand 19 über
    NUMBER      schiebe und gehe zu Zustand 20 über
    IDENT       schiebe und gehe zu Zustand 49 über
    STRING      schiebe und gehe zu Zustand 22 über

    function  gehe zu Zustand 29 über
    exp01     gehe zu Zustand 66 über
    exp02     gehe zu Zustand 36 über
    exp03     gehe zu Zustand 37 über
    exp04     gehe zu Zustand 38 über
    exp05     gehe zu Zustand 39 über
    exp06     gehe zu Zustand 40 über
    exp07     gehe zu Zustand 41 über
    exp08     gehe zu Zustand 42 über
    exp09     gehe zu Zustand 43 über
    expp      gehe zu Zustand 44 über
    value     gehe zu Zustand 45 über
    array     gehe zu Zustand 46 über


Zustand 17

   87 array: "[" . "]"
   88      | "[" . explist "]"

    "function"  schiebe und gehe zu Zustand 47 über
    "nil"       schiebe und gehe zu Zustand 11 über
    "true"      schiebe und gehe zu Zustand 12 über
    "false"     schiebe und gehe zu Zustand 13 über
    "("         schiebe und gehe zu Zustand 16 über
    "["         schiebe und gehe zu Zustand 17 über
    "]"         schiebe und gehe zu Zustand 67 über
    "!"         schiebe und gehe zu Zustand 19 über
    NUMBER      schiebe und gehe zu Zustand 20 über
    IDENT       schiebe und gehe zu Zustand 49 über
    STRING      schiebe und gehe zu Zustand 22 über

    function  gehe zu Zustand 29 über
    exp01     gehe zu Zustand 68 über
    exp02     gehe zu Zustand 36 über
    exp03     gehe zu Zustand 37 über
    exp04     gehe zu Zustand 38 über
    exp05     gehe zu Zustand 39 über
    exp06     gehe zu Zustand 40 über
    exp07     gehe zu Zustand 41 über
    exp08     gehe zu Zustand 42 über
    exp09     gehe zu Zustand 43 über
    expp      gehe zu Zustand 44 über
    value     gehe zu Zustand 45 über
    array     gehe zu Zustand 46 über
    explist   gehe zu Zustand 69 über


Zustand 18

   17 statement: ";" .

    $default  reduziere mit Regel 17 (statement)


Zustand 19

   73 exp08: "!" . exp09

    "function"  schiebe und gehe zu Zustand 47 über
    "nil"       schiebe und gehe zu Zustand 11 über
    "true"      schiebe und gehe zu Zustand 12 über
    "false"     schiebe und gehe zu Zustand 13 über
    "("         schiebe und gehe zu Zustand 16 über
    "["         schiebe und gehe zu Zustand 17 über
    NUMBER      schiebe und gehe zu Zustand 20 über
    IDENT       schiebe und gehe zu Zustand 49 über
    STRING      schiebe und gehe zu Zustand 22 über

    function  gehe zu Zustand 29 über
    exp09     gehe zu Zustand 70 über
    expp      gehe zu Zustand 44 über
    value     gehe zu Zustand 45 über
    array     gehe zu Zustand 46 über


Zustand 20

   82 value: NUMBER .

    $default  reduziere mit Regel 82 (value)


Zustand 21

   19 assignment: IDENT . "=" exp01
   77 expp: IDENT . "(" explist ")"
   86 value: IDENT .

    "("  schiebe und gehe zu Zustand 71 über
    "="  schiebe und gehe zu Zustand 72 über

    $default  reduziere mit Regel 86 (value)


Zustand 22

   80 value: STRING .

    $default  reduziere mit Regel 80 (value)


Zustand 23

    0 $accept: start . $end

    $end  schiebe und gehe zu Zustand 73 über


Zustand 24

    2 start: statements .

    $default  reduziere mit Regel 2 (start)


Zustand 25

    3 statements: statement .
    4           | statement . statements

    error       schiebe und gehe zu Zustand 1 über
    "return"    schiebe und gehe zu Zustand 2 über
    "throw"     schiebe und gehe zu Zustand 3 über
    "let"       schiebe und gehe zu Zustand 4 über
    "function"  schiebe und gehe zu Zustand 5 über
    "if"        schiebe und gehe zu Zustand 6 über
    "while"     schiebe und gehe zu Zustand 7 über
    "do"        schiebe und gehe zu Zustand 8 über
    "try"       schiebe und gehe zu Zustand 9 über
    "switch"    schiebe und gehe zu Zustand 10 über
    "nil"       schiebe und gehe zu Zustand 11 über
    "true"      schiebe und gehe zu Zustand 12 über
    "false"     schiebe und gehe zu Zustand 13 über
    "for"       schiebe und gehe zu Zustand 14 über
    "private"   schiebe und gehe zu Zustand 15 über
    "("         schiebe und gehe zu Zustand 16 über
    "["         schiebe und gehe zu Zustand 17 über
    ";"         schiebe und gehe zu Zustand 18 über
    "!"         schiebe und gehe zu Zustand 19 über
    NUMBER      schiebe und gehe zu Zustand 20 über
    IDENT       schiebe und gehe zu Zustand 21 über
    STRING      schiebe und gehe zu Zustand 22 über
